--- a/package.json
+++ b/package.json
@@ -9,13 +9,37 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.10",
+    "@react-native-community/netinfo": "9.3.0",
+    "@react-navigation/bottom-tabs": "^6.4.0",
+    "@react-navigation/material-top-tabs": "^6.3.0",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.1",
+    "axios": "^1.1.3",
     "expo": "~46.0.16",
+    "expo-constants": "^13.2.4",
+    "expo-splash-screen": "^0.16.2",
     "expo-status-bar": "~1.4.0",
+    "expo-updates": "^0.14.6",
+    "formik": "^2.2.9",
+    "jwt-decode": "^3.1.2",
+    "nativewind": "^2.0.11",
     "react": "18.0.0",
-    "react-native": "0.69.6"
+    "react-native": "0.69.6",
+    "react-native-gesture-handler": "~2.5.0",
+    "react-native-pager-view": "5.4.24",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
+    "react-native-tab-view": "^3.3.0",
+    "react-native-toast-notifications": "^3.3.1",
+    "react-redux": "^8.0.4",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "tailwindcss": "^3.2.1"
   },
   "private": true
 }
